--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -1,6 +1,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <!-- SEO Related Meta Tags -->
+    <meta name="description" content="ConnectCodeChat: A real-time chat platform for developers. Connect, collaborate, and solve coding challenges similar to StackOverflow.">
+    <meta name="keywords" content="ConnectCodeChat, real-time chat, developers, coding, collaboration, StackOverflow-like, programming, coding help">
+    <meta name="author" content="shawn cocking, shawn Dev's">
+
+    <!-- Social Media Meta Tags (OpenGraph for Facebook and others) -->
+    <meta property="og:title" content="<%= title %>">
+    <meta property="og:description" content="DevcConnectCodeChatonnect: A real-time chat platform for developers. Connect, collaborate, and solve coding challenges.">
+    <meta property="og:url" content="https://dev-connectv1-9aab7b3e6a2c.herokuapp.com/">
+
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.2.0/styles/default.min.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.2.0/highlight.min.js"></script>
