--- a/views/register.ejs
+++ b/views/register.ejs
@@ -9,7 +9,7 @@
                 <div class="col-md-5">
                     <div class="card border-success shadow-lg">
                         <div class="card-body">
-                            <h2 class="card-title text-success text-center mb-4">ChatApp Registration</h2>
+                            <h2 class="card-title text-success text-center mb-4">ConnectCodeChat! Registration</h2>
                             <form action="/user/register" method="post">
                                 <div class="form-group">
                                     <label for="regEmail" class="form-label">Email:</label>
